--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </address>
     </header>
     <main>
-      <div class="cover">
+      <section class="cover">
         <h1 class="cover__title">
           <span class="aligned-text">Оно</span>
           <span class="aligned-text_center">тебе</span>
@@ -52,8 +52,8 @@
           <p class="cover__description-text">Аукцион<span class="letter-spacing-first"> </span>вещей,<span class="letter-spacing-first"> </span>в<span class="letter-spacing-second"> </span>которые<span class="letter-spacing-second"> </span>никто<span class="letter-spacing-first"> </span>не<span class="letter-spacing-second"> </span>верил</p>
           <button class="bet-button">Cделать ставку</button>
          </div>
-      </div>
-      <div class="lots">
+        </section>
+      <section class="lots">
         <h2 class="lots-heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
@@ -82,8 +82,8 @@
           </li>
         </ul>
         <a class="lots__look-more-link">посмотреть больше</a>
-      </div>
-      <div class="about">
+      </section>
+      <section class="about">
         <div class="about__column">
           <div class="about__logo-image"></div>
         </div>
@@ -96,7 +96,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </main>
     <footer class="footer">
       <address>
