--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="../fonts/fonts.css">
-    <link rel="styleshhet" href="../styles/global.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="styleshhet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
     <header class="header">
@@ -16,19 +16,19 @@
           <li class="header__links-list-item_no-bullit header__links-list-item">
             <a class="header__link header__link_active">главная</a>
           </li>
-          <li class="header-list-underline header__links-list-item header__links-list-item-second">
+          <li class="list-underline header__links-list-item header__links-list-item-second">
             <a class="header__link">посмотреть лоты</a>
           </li>
-          <li class="header-list-underline header__links-list-item header__links-list-item-third">
+          <li class="list-underline header__links-list-item header__links-list-item-third">
             <a class="header__link">об аукционе</a>
           </li>
         </ul>
       </nav>
       <a class="header__logo">
-        <img class="header__logo-image" alt="логотип с подписью оно тебе надо" src="../images/logo-black.svg">
+        <img class="header__logo-image" alt="логотип с подписью оно тебе надо" src="./images/logo-black.svg">
       </a>
-      <address class="address">
-        <ul class="header__address">
+      <address class="header-address">
+        <ul class="address">
           <li>
             <a class="adderss-link" href="tel:+70000000">+9 999 555 5555</a>
           </li>
@@ -42,15 +42,15 @@
       </address>
     </header>
     <main>
-      <section class="cover">
+      <section class="cover overlay">
         <h1 class="cover__title">
           <span class="aligned-text">Оно</span>
           <span class="aligned-text_center">тебе</span>
           <span class="aligned-text_right">надо</span>
         </h1>
          <div class="cover__description">
-          <p class="cover__description-text">Аукцион<span class="letter-spacing-first"> </span>вещей,<span class="letter-spacing-first"> </span>в<span class="letter-spacing-second"> </span>которые<span class="letter-spacing-second"> </span>никто<span class="letter-spacing-first"> </span>не<span class="letter-spacing-second"> </span>верил</p>
-          <button class="bet-button">Cделать ставку</button>
+          <p class="cover__description-text">Аукцион<span class="letter-spacing-long"> </span>вещей,<span class="letter-spacing-long"> </span>в<span class="letter-spacing-short"> </span>которые<span class="letter-spacing-short"> </span>никто<span class="letter-spacing-long"> </span>не<span class="letter-spacing-short"> </span>верил</p>
+          <button type="submit" class="bet-button">Cделать ставку</button>
          </div>
         </section>
       <section class="lots">
@@ -58,7 +58,7 @@
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
             <a class="card-link">
-              <article class="card card_type_film">
+              <article class="card card_type_film overlay">
                 <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
                 <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр —<span class="card__text-spacing"> </span>Пол Томас Андерсон?</p>
               </article>
@@ -66,7 +66,7 @@
           </li>
           <li class="lots__card-list-item">
             <a class="card-link">
-              <article class="card card_type_book">
+              <article class="card card_type_book overlay">
                 <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
                 <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
               </article>
@@ -74,7 +74,7 @@
           </li>
           <li class="lots__card-list-item">
             <a class="card-link">
-              <article class="card card_type_picture">
+              <article class="card card_type_picture overlay">
                 <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
                 <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это —<span class="card__text-spacing"> </span>одна из революционных работ Кандинского?</p>
               </article>
@@ -92,7 +92,7 @@
             <h2 class="about__title">Об аукционе</h2>
             <div class="about__text">
               <p class="about__text__margin">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-              <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря <br> на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+              <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
             </div>
           </div>
         </div>
@@ -100,51 +100,45 @@
     </main>
     <footer class="footer">
       <address>
-        <ul class="header__address footer-address">
+        <ul class="address footer-address">
           <li>
-            <a>
-              <span class="header-list-underline">+9 999 555 5555</span>
-            </a>
+            <a class="adderss-link" href="tel:+70000000">+9 999 555 5555</a>
           </li>
           <li>
-            <a>
-              <span class="header-list-underline">info@sobaka.ge</span>
-            </a>
+            <a class="adderss-link" href="mailto:mail@example.com">info@sobaka.ge</a>
           </li>
           <li>
-            <a>
-              <span class="header-list-none">наб. Принсенграхт 263-265,<br> Амстердам</span>
-            </a>
+            <a>наб. Принсенграхт 263-265,<br> Амстердам</a>
           </li>
         </ul>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
-          <li class="footer__menu-list-item footer__menu-list-item-main">
+          <li class="footer__menu-list-item footer__menu-list-item-top">
             <a class="footer__menu-link">главная</a>
           </li>
-          <li class="footer__menu-list-item footer__menu-list-item-two">
-            <a class="footer__menu-link header-list-underline">посмотреть лоты</a>
+          <li class="footer__menu-list-item footer__menu-list-item-center">
+            <a class="footer__menu-link list-underline">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link header-list-underline">об аукционе</a>
+            <a class="footer__menu-link list-underline">об аукционе</a>
           </li>
         </ul>
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img class="footer__social-icon" alt="иконка youtude" src="../images/yt.svg">
+            <img class="footer__social-icon" alt="иконка youtude" src="./images/yt.svg">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img class="footer__social-icon" alt="иконка вконтакте" src="../images/vk.svg">
+            <img class="footer__social-icon" alt="иконка вконтакте" src="./images/vk.svg">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a>
-            <img class="footer__social-icon" alt="иконка pinterest" src="../images/pinterest.svg">
+            <img class="footer__social-icon" alt="иконка pinterest" src="./images/pinterest.svg">
           </a>
         </li>
       </ul>
